(library
 (name rawlink)
 (synopsis "Rawlink is a portable interface to BPF/AF_SOCKET")
 (public_name rawlink)
 (modules rawlink)
 (libraries rawlink_lowlevel cstruct unix lwt.unix))

(library
 (name rawlink_lowlevel)
 (synopsis "Rawlink lowlevel/common bits")
 (public_name rawlink.lowlevel)
 (modules rawlink_lowlevel)
 (libraries cstruct unix)
 (preprocess (pps ppx_cstruct))
 (foreign_stubs (language c) (names rawlink_stubs)))

(library
 (name lwt_rawlink)
 (synopsis "Lwt_rawlink is a Lwt interface to BPF/AF_SOCKET")
 (modules lwt_rawlink)
 (public_name rawlink.lwt)
 (libraries rawlink rawlink_lowlevel lwt lwt.unix))

(library
 (name eio_rawlink)
 (synopsis "Eio_rawlink is a Eio interface to BPF/AF_SOCKET")
 (modules eio_rawlink)
 (public_name rawlink.eio)
 (libraries cstruct eio eio.unix rawlink))

